# FastAPI_School_Journal

./: .dockerignore  .env.template  .flake8  .gitignore  .sample.Dockerfile  .sample.env  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  docker-compose.yaml.template  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2025_01_10_1339-1e2b0ffa8854_initial_migration.py  2025_02_05_1812-6252e931d640_id_field_mixin.py  2025_02_11_1624-17fbb1fc6b14_add_marks_and_profiles_tables.py  2025_02_11_1729-88982e68e97a_rename_hashed_password_to_password.py  2025_02_16_0839-c33f95ddec30_rework_models.py  2025_02_19_0720-65e93bb97b0b_remove_profiles_table_rework_of_.py  2025_02_19_0724-c673dfa660a3_create_users_table.py  2025_02_19_0738-795ed456ba08_student_class_relatioship_moved_to_.py
app/: main.py
app/journal/api/: api.py  models.py
docker/: Dockerfile
src/: main.py
src/alembic/: env.py
src/alembic/versions/: 2025_01_10_1511-1c3e667310e9_add_class_num_fk.py  2025_01_26_1350-6b1886afd5a1_create_teachers_table.py  2025_01_26_1500-e0cac510a617_make_class_id_in_teachers_table_unique.py  2025_02_13_1711-f0496c7118a9_add_roles_column.py  2025_02_18_1822-e03d56a3c543_add_science_subject_to_marks.py  2025_02_19_0730-c832a5e73861_create_user_student_and_user_teacher_.py  2025_03_26_1250-f4d719ea55eb_add_is_active_field_to_users.py  2025_03_26_1313-751fa8369c87_add_is_active_field_to_users.py  2025_03_28_2026-7c94ff28489f_add_indexes_some_fields_small_changes.py  2025_03_28_2056-f15b957cc320_add_subjectenum_to_teachers.py  2025_03_30_0833-82e8a271ecaa_change_enum_values_to_full_uppercase.py  (+8 more)
src/api/: __init__.py  crud.py  models.py  schemas.py  views.py
src/auth/: __init__.py  middlewares.py  schemas.py  token_mixin.py  utils.py  views.py
src/core/: __init__.py  config.py  db_utils.py  events.py
src/mailing/: send_email.py  send_verification_email.py  send_welcome_email.py
src/tasks/: __init__.py  send_verification_email.py  send_welcome_email.py
src/users/: __init__.py  create_user.py  crud.py  dependencies.py  marks_schemas.py  model.py  models.py  schemas.py  views.py
tests/: conftest.py  test_classes.py  test_main.py  testing_db_utils.py
(+91 files in other folders)
