[project]
name = "fastapi-school-journal"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiosmtplib>=4.0.1",
    "pika-stubs>=0.1.3",
    "sqlalchemy[asyncio]>=2.0.39",
    "alembic>=1.16.4",
    "taskiq-aio-pika>=0.4.3",
    "taskiq>=0.11.18",
    "taskiq-fastapi>=0.3.5",
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.10.1",
    "asyncpg>=0.30.0",
    "orjson>=3.11.0",
    "pyjwt[crypto]>=2.10.1",
    "python-multipart>=0.0.20",
    "pwdlib[argon2]>=0.2.1",
    "gunicorn>=23.0.0",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "redis>=6.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-coverage>=0.0",
    "ruff>=0.12.4",
]
